[tool.poetry]
name = "piggy_store"
version = "0.1.0"
description = "Store files easily"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]

[tool.poetry.dependencies]
python = "^3.7"
autopep8 = "^1.5"
cryptography = "^2.8"
Flask = "^1.1.1"
Flask-JSON = "^0.3.4"
PyJWT = "^2.4.0"
pyYAML = "^5.3.1"
redis = "^3.4.1"
minio = "^5.0.8"
pytest = "^5.4.1"
tox = "^3.14.5"
sentry-sdk = {version = "^0.14.2", extras = ["flask"]}
blinker = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
coveralls = "^1.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
